--- a/react-with-typescript/package.json
+++ b/react-with-typescript/package.json
@@ -6,11 +6,11 @@
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
-    "lint": "prettier --config .prettierrc.js --write src/**/*.{ts,tsx,css,scss}",
+    "lint": "eslint --fix --config .eslintrc.js --ignore-path .eslintignore . --ext ts,tsx  && prettier --write \"**/*.+(js|jsx|ts|tsx|json|yml|yaml|css|md)\" --ignore-path .prettierignore",
     "eject": "react-scripts eject"
   },
   "dependencies": {
-    "@ant-design/icons": "^4.1.0",
+    "@ant-design/icons": "^4.2.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -20,10 +20,10 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.0",
-    "antd": "^4.2.0",
-    "antd-dayjs-webpack-plugin": "^1.0.0",
+    "antd": "^4.8.0",
     "babel-plugin-import": "^1.13.0",
     "customize-cra": "^0.9.1",
+    "moment": "^2.29.1",
     "prettier": "^2.0.5",
     "react": "^16.13.1",
     "react-app-rewired": "^2.1.6",
@@ -32,29 +32,34 @@
     "react-scripts": "3.4.1",
     "sass-vars-to-js": "^0.8.7",
     "styled-components": "^5.1.0",
-    "typescript": "~3.7.2"
+    "typescript": "^4.1.1-rc"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.31.0",
     "@typescript-eslint/parser": "^2.31.0",
+    "antd-dayjs-webpack-plugin": "^1.0.1",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-prettier": "^6.11.0",
+    "eslint-config-react-app": "^6.0.0",
+    "eslint-import-resolver-typescript": "^2.3.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.1",
-    "husky": ">=4",
+    "husky": "^4.3.0",
     "less": "^3.11.1",
     "less-loader": "5.0.0",
     "lint-staged": ">=10",
     "node-sass": "^4.14.1",
+    "react-app-rewire-svg-react-loader": "codebandits/react-app-rewire-svg-react-loader",
     "sass": "^1.26.5",
     "sass-extract": "^2.1.0",
     "sass-extract-js": "^0.4.0",
     "sass-extract-loader": "^1.1.0",
-    "sass-loader": "^8.0.2"
+    "sass-loader": "^8.0.2",
+    "url-loader": "^4.1.1"
   },
   "browserslist": {
     "production": [
@@ -70,12 +75,17 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "lint-staged --allow-empty"
     }
   },
   "lint-staged": {
-    "*.{ts,tsx}": [
-      "eslint --fix"
+    "!(*test).{ts,tsx}": [
+      "eslint --fix --config .eslintrc.js --ignore-path .eslintignore . --ext ts,tsx",
+      "prettier --write \"**/*.+(js|jsx|ts|tsx|json|yml|yaml|css|md)\" --ignore-path .prettierignore",
+      "git add"
+    ],
+    "*.{json,md,html,scss}": [
+      "prettier --write"
     ]
   }
 }
